--- a/AutomapperInheritance/AutomapperInheritance/AutomapperInheritance.csproj
+++ b/AutomapperInheritance/AutomapperInheritance/AutomapperInheritance.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="AutoMapper" Version="12.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\Enums\" />
+  </ItemGroup>
+
 </Project>
