--- a/AutomapperInheritance/AutomapperInheritance/AutomapperInheritance.csproj
+++ b/AutomapperInheritance/AutomapperInheritance/AutomapperInheritance.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.10" />
   </ItemGroup>
 
   <ItemGroup>
